more minor changes

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -23,7 +23,7 @@ print_info() {
 
     info underline
    info "CPU" cpu
-   info "GPU" gpu
+#   info "GPU" gpu
    info "Memory" memory
      info "CPU Usage" cpu_usage
      info "Disk" disk
@@ -32,8 +32,8 @@ print_info() {
      [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     #info "Public IP" public_ip
-     info "Users" users
-     info "Locale" locale  # This only works on glibc systems.
+#     info "Users" users
+#     info "Locale" locale  # This only works on glibc systems.
 
     info cols
 }
@@ -512,7 +512,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(14 14 15 14 14 14)
 
 
 # Text Options
@@ -523,7 +523,7 @@ colors=(distro)
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --bold
-bold="on"
+bold="off"
 
 # Enable/Disable Underline
 #
@@ -754,7 +754,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(14 14)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
