--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,72 +1,39 @@
-# Copyright (c) 2017-present Arctic Ice Studio <development@arcticicestudio.com>
-# Copyright (c) 2017-present Sven Greb <code@svengreb.de>
-
-# Project:    Nord Alacritty
-# Version:    0.1.0
-# Repository: https://github.com/arcticicestudio/nord-alacritty
-# License:    MIT
-# References:
-#   https://github.com/alacritty/alacritty
-
 colors:
-  primary:
-      #background: '#2e3440'
-    background: '#000000'
-    foreground: '#d8dee9' 
-    dim_foreground: '#a5abb6'
-  cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
-  vi_mode_cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
-  selection:
-    text: CellForeground
-    background: '#4c566a'
-  search:
-    matches:
-      foreground: CellBackground
-      background: '#88c0d0'
-    bar:
-      background: '#434c5e'
-      foreground: '#d8dee9'
-  normal:
-    black: '#3b4252'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#88c0d0'
-    white: '#e5e9f0'
-  bright:
-    black: '#4c566a'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#8fbcbb'
-    white: '#eceff4'
-  dim:
-    black: '#373e4d'
-    red: '#94545d'
-    green: '#809575'
-    yellow: '#b29e75'
-    blue: '#68809a'
-    magenta: '#8c738c'
-    cyan: '#6d96a5'
-    white: '#aeb3bb'
+    primary:
+        background: "#000000"
+        foreground: "#abb2bf"
+    normal:
+        black: "#282c34"
+        red: "#e06c75"
+        green: "#98c379"
+        yellow: "#d19a66"
+        blue: "#61afef"
+        magenta: "#c678dd"
+        cyan: "#56b6c2"
+        white: "#abb2bf"
+    bright:
+        black: "#5c6370"
+        red: "#e06c75"
+        green: "#98c379"
+        yellow: "#d19a66"
+        blue: "#61afef"
+        magenta: "#c678dd"
+        cyan: "#56b6c2"
+        white: "#ffffff"
 window:
-  padding:
-    x: 0
-    y: 0
+    padding:
+        x: 0
+        y: 0
 font:
-  normal:
-    family: Fira Code
-    style: semibold
-  size: 15
-background_opacity: 0.9 
-key_bindings: 
- - { key: Equals,   mods: Control, action: IncreaseFontSize }
- - { key: Plus, mods: Control, action: DecreaseFontSize }
+    normal:
+        family: monospace
+        style: bold
+    size: 10
+background_opacity: 0.9
+key_bindings:
+    - key: Equals
+      mods: Control
+      action: IncreaseFontSize
+    - key: Plus
+      mods: Control
+      action: DecreaseFontSize
