--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -25,7 +25,7 @@ print_info() {
    info "CPU" cpu
 #   info "GPU" gpu
    info "Memory" memory
-     info "CPU Usage" cpu_usage
+  #  info "CPU Usage" cpu_usage
      info "Disk" disk
     info "Battery" battery
      info "Song" song
@@ -512,7 +512,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(14 14 15 14 14 14)
+colors=(4 4 15 4 4 15)
 
 
 # Text Options
@@ -523,7 +523,7 @@ colors=(14 14 15 14 14 14)
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --bold
-bold="off"
+bold="on"
 
 # Enable/Disable Underline
 #
@@ -754,7 +754,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(14 14)
+ascii_colors=(4 4)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
