--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,34 +1,35 @@
 colors:
   primary:
-    background: "#000000"
-    foreground: "#abb2bf"
+    # background: "#282828"
+    background: "#1D2021"
+    foreground: "#ebdbb2"
   normal:
-    black: "#282c34"
-    red: "#e06c75"
-    green: "#98c379"
-    yellow: "#d19a66"
-    blue: "#61afef"
-    magenta: "#c678dd"
-    cyan: "#56b6c2"
-    white: "#abb2bf"
+    black: "#282828"
+    red: "#cc241d"
+    green: "#98971a"
+    yellow: "#d79921"
+    blue: "#458588"
+    magenta: "#b16286"
+    cyan: "#689d6a"
+    white: "#a89984"
   bright:
-    black: "#5c6370"
-    red: "#e06c75"
-    green: "#98c379"
-    yellow: "#d19a66"
-    blue: "#61afef"
-    magenta: "#c678dd"
-    cyan: "#56b6c2"
-    white: "#ffffff"
+    black: "#928374"
+    red: "#fb4934"
+    green: "#b8bb26"
+    yellow: "#fabd2f"
+    blue: "#83a598"
+    magenta: "#d3869b"
+    cyan: "#8ec07c"
+    white: "#ebdbb2"
 window:
   padding:
     x: 0
     y: 0
 font:
   normal:
-    family: "Monospace"
+    family: Monospace
   size: 10
-background_opacity: 0.9
+background_opacity: 1
 key_bindings:
   - key: Equals
     mods: Control
