--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,8 +1,9 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-#   info title
+  # info title
 
+  # info underline
     info "OS" distro
     info "DE" de
    info "Host" model
@@ -11,7 +12,7 @@ print_info() {
     info "Shell" shell
     info "Terminal" term
 
-    info underline
+   info underline
     info "Uptime" uptime
     info "Resolution" resolution
    info "WM" wm
@@ -21,7 +22,7 @@ print_info() {
     info "Terminal Font" term_font
      info "Font" font
 
-    info underline
+   info underline
    info "CPU" cpu
 #   info "GPU" gpu
    info "Memory" memory
