--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,7 +4,7 @@ colors:
     background: "#1D2021"
     foreground: "#ebdbb2"
   normal:
-    black: "#282828"
+    black: "#1D2021"
     red: "#cc241d"
     green: "#98971a"
     yellow: "#d79921"
