--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -315,7 +315,7 @@ gtk_shorthand="off"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Adwaita [GTK3]'
-gtk2="on"
+#gtk2="on"
 
 # Enable/Disable gtk3 Theme / Icons / Font
 #
@@ -326,7 +326,7 @@ gtk2="on"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Numix [GTK2]'
-gtk3="on"
+#gtk3="on"
 
 
 # IP Address
@@ -465,7 +465,7 @@ disk_percent="on"
 # xmms2d
 # xnoise
 # yarock
-music_player="auto"
+#music_player="auto"
 
 # Format to display song information.
 #
@@ -475,7 +475,7 @@ music_player="auto"
 #
 # Example:
 # default: 'Song: Jet - Get Born - Sgt Major'
-song_format="%artist% - %album% - %title%"
+#song_format="%artist% - %album% - %title%"
 
 # Print the Artist, Album and Title on separate lines
 #
@@ -538,7 +538,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
+underline_char="―"
 
 
 # Info Separator
@@ -627,7 +627,7 @@ bar_char_total="="
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --bar_border
-bar_border="on"
+bar_border="off"
 
 # Progress bar length in spaces
 # Number of chars long to make the progress bars.
@@ -744,7 +744,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+ascii_distro="arch_old"
 
 # Ascii Colors
 #
@@ -755,7 +755,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(3 3)
+ascii_colors=(3 15)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -817,7 +817,7 @@ image_size="300px"
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=2
 
 # Image offsets
 # Only works with the w3m backend.
