--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -7,20 +7,20 @@ print_info() {
     info "OS" distro
     info "DE" de
    info "Host" model
-   info "Packages" packages
+   #info "Packages" packages
    info "Kernel" kernel
     info "Shell" shell
     info "Terminal" term
 
    info underline
+    info "Terminal Font" term_font
     info "Uptime" uptime
     info "Resolution" resolution
    info "WM" wm
-   info "WM Theme" wm_theme
-   info "Theme" theme
-   info "Icons" icons
-    info "Terminal Font" term_font
-     info "Font" font
+   #info "WM Theme" wm_theme
+   #info "Theme" theme
+   #info "Icons" icons
+   #info "Font" font
 
    info underline
    info "CPU" cpu
