--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -8,26 +8,26 @@ print_info() {
     info "DE" de
    info "Host" model
    #info "Packages" packages
-   info "Kernel" kernel
     info "Shell" shell
     info "Terminal" term
+   info "Kernel" kernel
 
    info underline
     info "Terminal Font" term_font
-    info "Uptime" uptime
     info "Resolution" resolution
    info "WM" wm
+    info "Uptime" uptime
    #info "WM Theme" wm_theme
    #info "Theme" theme
    #info "Icons" icons
    #info "Font" font
 
    info underline
-   info "CPU" cpu
 #   info "GPU" gpu
    info "Memory" memory
   #  info "CPU Usage" cpu_usage
      info "Disk" disk
+   info "CPU" cpu
     info "Battery" battery
      info "Song" song
      [[ "$player" ]] && prin "Music Player" "$player"
@@ -744,7 +744,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="arch_old"
+ascii_distro="arch"
 
 # Ascii Colors
 #
@@ -755,7 +755,7 @@ ascii_distro="arch_old"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(3 15)
+ascii_colors=(3 3)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
