--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -26,7 +26,7 @@ window:
     y: 0
 font:
   normal:
-    family: Monospace
+    family: Hack Nerd Font
   size: 10
 background_opacity: 1
 key_bindings:
