--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,34 +1,39 @@
 colors:
+  name: Mono Theme
+  author: ""
   primary:
-    background: "#282828"
-    foreground: "#ebdbb2"
+    background: "#000000"
+    foreground: "#ffffff"
+  cursor:
+    text: "#000000"
+    cursor: "#ffffff"
   normal:
-    black: "#282828"
-    red: "#cc241d"
-    green: "#98971a"
-    yellow: "#d79921"
-    blue: "#458588"
-    magenta: "#b16286"
-    cyan: "#689d6a"
-    white: "#a89984"
+    black: "#000000"
+    red: "#6b6b6b"
+    green: "#c4c4c4"
+    yellow: "#b3b3b3"
+    blue: "#999999"
+    magenta: "#717171"
+    cyan: "#8a8a8a"
+    white: "#b5cabb"
   bright:
-    black: "#928374"
-    red: "#fb4934"
-    green: "#b8bb26"
-    yellow: "#fabd2f"
-    blue: "#83a598"
-    magenta: "#d3869b"
-    cyan: "#8ec07c"
-    white: "#ebdbb2"
+    black: "#202020"
+    red: "#464646"
+    green: "#f8f8f8"
+    yellow: "#eeeeee"
+    blue: "#7c7c7c"
+    magenta: "#adadad"
+    cyan: "#c0c0c0"
+    white: "#99ac9e"
 window:
   padding:
-    x: 0
-    y: 0
+    x: 5
+    y: 5
 font:
   normal:
     family: Hack Nerd Font
   size: 10
-background_opacity: 1
+background_opacity: 0.8
 key_bindings:
   - key: Equals
     mods: Control
