--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -513,7 +513,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(3 3 15 3 3 15)
+colors=(3 3 10 3 3 10)
 
 
 # Text Options
@@ -753,9 +753,8 @@ ascii_distro="arch"
 # Flag:     --ascii_colors
 #
 # Example:
-# ascii_colors=(distro)      - Ascii is colored based on Distro colors.
-# ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(3 3)
+# ascii_colors=(distro)      - Ascii is colored based on Distro colors.  ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
+ascii_colors=(10 10)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
