--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -199,7 +199,8 @@ opacity-rule = [
   # "100:class_g    = 'URxvt'",
   # "100:class_g    = 'kitty'",
    "100:class_g     = 'Alacritty'",
-   "80:class_g      = 'main.py'"
+   "80:class_g      = 'main.py'",
+   "80:class_g      = 'Zathura'",
   # "80:class_g     = 'Polybar'",
   # "100:class_g    = 'code-oss'",
   # "100:class_g    = 'Meld'",
@@ -250,7 +251,7 @@ blur-size = 10
 #  # requires: https://github.com/ibhagwan/picom
 #  method = "kawase";
 #  #method = "kernel";
-#  strength = 1;
+#  strength = 2;
 #  # deviation = 1.0;
 #  # kernel = "11x11gaussian";
 #  background = false;
