made font smaller

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -199,8 +199,9 @@ opacity-rule = [
   # "100:class_g    = 'URxvt'",
   # "100:class_g    = 'kitty'",
    "100:class_g     = 'Alacritty'",
-   "80:class_g      = 'main.py'",
+   "80:class_g      = 'stt'",
    "80:class_g      = 'Zathura'",
+   "80:class_g      = 'main.py'",
   # "80:class_g     = 'Polybar'",
   # "100:class_g    = 'code-oss'",
   # "100:class_g    = 'Meld'",
