--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -202,7 +202,7 @@ opacity-rule = [
    "80:class_g      = 'stt'",
    "80:class_g      = 'Zathura'",
    "80:class_g      = 'main.py'",
-   "80:class_g      = 'Code'",
+   # "80:class_g      = 'Code'",
    "90:class_g      = 'Anki'",
   # "80:class_g     = 'Polybar'",
   # "100:class_g    = 'code-oss'",
